# ML-Project

ml_project/: app.py  pyproject.toml  testes.ipynb
