[tool.poetry]
name = "ml_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
streamlit = "^1.39.0"
matplotlib = "^3.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
